tests/baselines/reference/parserModuleDeclaration5.errors.txt
parserModuleDeclaration5.ts(3,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== parserModuleDeclaration5.ts (1 errors) ====
    namespace M1 {
      declare namespace M2 {
        declare namespace M3 {
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
        }
      }
    }